examples/test/testpolicy14567.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14567
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key28: value13
      key32: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value1
          key15: value1
          key1: value43
      podSelector:
        matchLabels:
          key27: value29
          key5: value17
          key4: value45
